convert index.html to utf-8

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <meta http-equiv="Content-Language" content="de">
     <meta name="keywords" lang="de" content="Garten, Steingarten,Dianthus,Daphne,Canarina,Campanula,Cistus,Ramonda,Verkauf">
-    <meta name="description" lang="de" content="Christophs Pflanzenparadies.Verkaufsliste für Steingartenpflanzen,Mediterrane,Raritaeten, Dr. Christoph Rohlfs">
+    <meta name="description" lang="de" content="Christophs Pflanzenparadies.Verkaufsliste fÃ¼r Steingartenpflanzen,Mediterrane,Raritaeten, Dr. Christoph Rohlfs">
     <style type="text/css" media="all">.imgstyle { position:absolute; visibility:visible; top:-150px; }
     </style>
-    <title> Der Steingärtner
+    <title> Der SteingÃ¤rtner
     </title>
   </head>
   <body background="Cyclamen-hederifolium.JPG"text="#99cc33" link="#ffcc99" vlink="#ffcc99" alink="#ffffff" leftmargin="30" topmargin="50">
@@ -16,7 +16,7 @@
           <tr>
             <td colspan="2" width="100%" bgcolor=#009900">
               <p align="middle" style="margin-right: 10px;">
-                <font size="6" face="Monotype Corsiva"> Der Steingärtner
+                <font size="6" face="Monotype Corsiva"> Der SteingÃ¤rtner
                 </font>
               </p></td>
           </tr>
@@ -27,15 +27,15 @@
                 </font>
               </p>
               <p align="left" style="margin-right: 10px;">
-                <font size="3" face="Arial"> Als begeisterter Hobbygärtner möchte ich Ihnen hier ein paar Einblicke in meinen Garten geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber in meinem Garten ist auch für zahlreiche Stauden, Rosen, Sommerblumen, Gemüse und Obstgehölze Platz, in meinem Gewächshaus dürfen Orchideen ihre Pracht entfalten.
+                <font size="3" face="Arial"> Als begeisterter HobbygÃ¤rtner mÃ¶chte ich Ihnen hier ein paar Einblicke in meinen Garten geben. Mein besonderes Interesse gilt seit vielen Jahren den Steingartenpflanzen, aber in meinem Garten ist auch fÃ¼r zahlreiche Stauden, Rosen, Sommerblumen, GemÃ¼se und ObstgehÃ¶lze Platz, in meinem GewÃ¤chshaus dÃ¼rfen Orchideen ihre Pracht entfalten.
                 </font>
               </p>
               <p align="left" style="margin-right: 10px;">
-                <font size="3" face="Arial"> Im Hauptberuf bin ich übrigens Zahnarzt, verheiratat, und habe 2 Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m Höhe am Stadtrand. Mein Name: Dr. Christoph Rohlfs
+                <font size="3" face="Arial"> Im Hauptberuf bin ich Ã¼brigens Zahnarzt, verheiratat, und habe 2 Kinder. Mein Garten liegt in Bonn, allerdings nicht im Rheintal, sondern in etwas weniger mildem Klima in 140m HÃ¶he am Stadtrand. Mein Name: Dr. Christoph Rohlfs
                 </font>
               </p>
               <p align="left" style="margin-right: 10px;">
-                <font size="3" face="Arial"> Androsace, Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula, Ramonda... und viele andere Pflanzengattungen, insbesondere Raritäten finden Sie in meinem Garten.
+                <font size="3" face="Arial"> Androsace, Campanula, Canarina, Cistus, Daphne, Dianthus, Gentiana, Haberlea, Penstemon, Primula, Ramonda... und viele andere Pflanzengattungen, insbesondere RaritÃ¤ten finden Sie in meinem Garten.
                 </font>
               </p></td>
           </tr>
@@ -83,7 +83,7 @@
                 </font>
                 <br>
                 <font face="Arial" size="2">
-                  <!--b--> Brauchen Sie noch Steingartenpflanzen für Ihren eigenen Garten? Ich habe immer wieder Pflanzen übrig. Hier geht&#8217;s zur Liste und zum Bestellformular
+                  <!--b--> Brauchen Sie noch Steingartenpflanzen fÃ¼r Ihren eigenen Garten? Ich habe immer wieder Pflanzen Ã¼brig. Hier geht&#8217;s zur Liste und zum Bestellformular
                   <!--/b-->
                   <br>
                 </font>
